--- a/.gitignore
+++ b/.gitignore
@@ -399,3 +399,25 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+# ignore build artifacts
+Debug/
+Release/
+x64/
+# exception for static libraries using the x64 platform shortname
+![Tt]hirdparty/**/lib/x64/
+
+# ignore Visual Studio (Code) cruft
+.tlog/
+.vs/
+.vscode/
+
+*.vcxproj.user
+
+# ignore common build artifacts
+*.obj
+*.pdb
+*.idb
+*.log
+*vcpkg_installed/
+
