tiny triangle is now on screen

--- a/RendererProject/RendererProject.vcxproj
+++ b/RendererProject/RendererProject.vcxproj
@@ -143,6 +143,8 @@
   <ItemGroup>
     <None Include="Res\Shader\Basic.frag" />
     <None Include="Res\Shader\Basic.vert" />
+    <None Include="Res\shad\basicCamera.vert" />
+    <None Include="Res\shad\basicCameraFrag.frag" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
